--- a/app/src/main/res/layout/activity_route_info.xml
+++ b/app/src/main/res/layout/activity_route_info.xml
@@ -7,14 +7,14 @@
     tools:context=".RouteInfoActivity">
 
     <TableLayout
-        android:id="@+id/table1"
+        android:id="@+id/edittext_table"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
         android:shrinkColumns="0">
 
         <TableRow
-            android:id="@+id/row1"
+            android:id="@+id/route_row"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
@@ -35,7 +35,7 @@
         </TableRow>
 
         <TableRow
-            android:id="@+id/row2"
+            android:id="@+id/starting_row"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
@@ -54,7 +54,7 @@
         </TableRow>
 
         <TableRow
-            android:id="@+id/row3">
+            android:id="@+id/stop_row">
 
             <TextView
                 android:id="@+id/stop_textView"
@@ -78,7 +78,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
-        app:layout_constraintTop_toBottomOf="@id/table1"
+        app:layout_constraintTop_toBottomOf="@id/edittext_table"
         tools:layout_editor_absoluteX="0dp">
 
         <TextView
@@ -129,7 +129,7 @@
     </LinearLayout>
 
     <LinearLayout
-        android:id="@+id/linearLayout6"
+        android:id="@+id/add_info_static_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
@@ -150,13 +150,13 @@
     </LinearLayout>
 
     <LinearLayout
-        android:id="@+id/linearLayout5"
+        android:id="@+id/path_layout"
         android:layout_width="286dp"
         android:layout_height="36dp"
         android:layout_marginTop="12dp"
         android:orientation="horizontal"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/linearLayout6">
+        app:layout_constraintTop_toBottomOf="@id/add_info_static_layout">
 
         <TextView
             android:id="@+id/path_textView"
@@ -185,13 +185,13 @@
     </LinearLayout>
 
     <LinearLayout
-        android:id="@+id/linearLayout4"
+        android:id="@+id/incline_layout"
         android:layout_width="286dp"
         android:layout_height="36dp"
         android:layout_marginTop="12dp"
         android:orientation="horizontal"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout5">
+        app:layout_constraintTop_toBottomOf="@+id/path_layout">
 
         <TextView
             android:id="@+id/incline_text"
@@ -216,12 +216,12 @@
     </LinearLayout>
 
     <LinearLayout
-        android:id="@+id/linearLayout2"
+        android:id="@+id/terrainLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
         android:orientation="horizontal"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
+        app:layout_constraintTop_toBottomOf="@+id/incline_layout"
         tools:layout_editor_absoluteX="0dp">
 
         <TextView
@@ -255,7 +255,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">
+        app:layout_constraintTop_toBottomOf="@+id/terrainLayout">
 
         <TextView
             android:id="@+id/texture_textView"
@@ -279,7 +279,7 @@
     </LinearLayout>
 
     <LinearLayout
-        android:id="@+id/linearLayout3"
+        android:id="@+id/difficulty_buttons"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
@@ -322,7 +322,7 @@
         android:button="@drawable/favorite"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.47"
-        app:layout_constraintStart_toEndOf="@+id/linearLayout4"
+        app:layout_constraintStart_toEndOf="@+id/incline_layout"
         app:layout_constraintTop_toBottomOf="@+id/favoriteTextView" />
 
     <TextView
@@ -334,11 +334,11 @@
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.471"
-        app:layout_constraintStart_toEndOf="@+id/linearLayout5"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout6" />
+        app:layout_constraintStart_toEndOf="@+id/path_layout"
+        app:layout_constraintTop_toBottomOf="@+id/add_info_static_layout" />
 
     <LinearLayout
-        android:id="@+id/linearLayout7"
+        android:id="@+id/save_cancel_buttons"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
