--- a/app/src/main/res/layout/activity_route_details_page.xml
+++ b/app/src/main/res/layout/activity_route_details_page.xml
@@ -7,7 +7,7 @@
     tools:context=".RouteDetailsPage">
 
     <LinearLayout
-        android:id="@+id/linearLayout"
+        android:id="@+id/title_layout"
         android:layout_width="411dp"
         android:layout_height="39dp"
         android:layout_marginTop="10dp"
@@ -35,10 +35,10 @@
         android:id="@+id/tableLayout"
         android:layout_width="417dp"
         android:layout_height="79dp"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="15dp"
         android:shrinkColumns="1"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout">
+        app:layout_constraintTop_toBottomOf="@+id/title_layout">
 
         <TableRow
             android:id="@+id/start_detail_row"
@@ -192,7 +192,7 @@
             android:id="@+id/add_info"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
+            android:layout_marginStart="15dp"
             android:paddingStart="5dp"
             android:paddingEnd="5dp"
             android:text="@string/additional_info"
@@ -200,6 +200,141 @@
             android:textStyle="bold">
 
         </TextView>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/texture_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="12dp"
+        android:orientation="horizontal"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/terrainLayout">
+
+        <ImageView
+            android:id="@+id/surface_image"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_marginStart="25dp"
+            android:tint="@android:color/darker_gray"
+            app:srcCompat="@drawable/surface" />
+
+        <TextView
+            android:id="@+id/texture_textView"
+            android:layout_width="61dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="25dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="5dp"
+            android:layout_weight="1"
+            android:text="Surface"
+            android:textSize="18sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/terrain_text" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/terrainLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="12dp"
+        android:orientation="horizontal"
+        app:layout_constraintTop_toBottomOf="@+id/incline_layout"
+        tools:layout_editor_absoluteX="0dp">
+
+        <ImageView
+            android:id="@+id/terrain_image"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_marginStart="25dp"
+            android:tint="@android:color/darker_gray"
+            app:srcCompat="@drawable/terrain" />
+
+        <TextView
+            android:id="@+id/terrain_text"
+            android:layout_width="61dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="25dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="5dp"
+            android:layout_weight="1"
+            android:text="Terrain Type"
+            android:textSize="18sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/incline_text" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/incline_layout"
+        android:layout_width="411dp"
+        android:layout_height="34dp"
+        android:layout_marginTop="12dp"
+        android:orientation="horizontal"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/path_layout">
+
+        <ImageView
+            android:id="@+id/incline_image"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_marginStart="25dp"
+            android:layout_marginTop="3.5dp"
+            android:scaleX="1.25"
+            android:scaleY="1.25"
+            android:tint="@android:color/darker_gray"
+            app:srcCompat="@drawable/incline" />
+
+        <TextView
+            android:id="@+id/incline_text"
+            android:layout_width="61dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="25dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="5dp"
+            android:layout_weight="1"
+            android:text="Incline"
+            android:textSize="18sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/path_textView" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/path_layout"
+        android:layout_width="413dp"
+        android:layout_height="34dp"
+        android:layout_marginTop="12dp"
+        android:orientation="horizontal"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/add_info_static_layout">
+
+        <ImageView
+            android:id="@+id/path_image"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_marginStart="25dp"
+            android:tint="@android:color/darker_gray"
+            app:srcCompat="@drawable/path" />
+
+        <TextView
+            android:id="@+id/path_textView"
+            android:layout_width="61dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="25dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="5dp"
+            android:layout_weight="1"
+            android:text="Path Type"
+            android:textSize="18sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.033"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/add_info" />
 
     </LinearLayout>
 
