--- a/app/src/main/res/layout/content_debug_walk.xml
+++ b/app/src/main/res/layout/content_debug_walk.xml
@@ -114,7 +114,7 @@
         android:layout_marginStart="61dp"
         android:layout_marginTop="12dp"
         android:layout_marginEnd="61dp"
-        android:text="CONTINUE"
+        android:text="STEP UP"
         android:textSize="45dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
