--- a/app/src/main/res/layout/activity_route_details_page.xml
+++ b/app/src/main/res/layout/activity_route_details_page.xml
@@ -9,7 +9,10 @@
     <ScrollView
         android:id="@+id/scrollable"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toTopOf="@+id/button_bar"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
             android:id="@+id/scroll_layout"
@@ -378,7 +381,7 @@
                         android:text="@string/true_tick"
                         android:textAlignment="center"
                         android:textSize="20sp"
-                        android:visibility="invisible"/>
+                        android:visibility="invisible" />
                 </LinearLayout>
 
                 <LinearLayout
@@ -413,7 +416,7 @@
             <LinearLayout
                 android:id="@+id/notes_details_layout"
                 android:layout_width="409dp"
-                android:layout_height="118dp"
+                android:layout_height="wrap_content"
                 android:layout_marginTop="12dp"
                 android:orientation="vertical">
 
@@ -441,7 +444,7 @@
 
                 <TextView
                     android:id="@+id/notes_content"
-                    android:layout_width="363dp"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="25dp"
                     android:layout_marginTop="5dp"
@@ -451,7 +454,18 @@
                     android:scrollbars="vertical"
                     android:text="    Hello these are notes I wrote down about this trail. I don't know why I'm writing so much about this trail." />
             </LinearLayout>
-                
+
+            <Button
+                android:id="@+id/sched_walk_btn"
+                style="@style/Widget.AppCompat.Button.Colored"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="40dp"
+                android:layout_marginEnd="40dp"
+                android:layout_marginBottom="10dp"
+                android:backgroundTint="#DCBF00"
+                android:text="Schedule Walk" />
+
         </LinearLayout>
     </ScrollView>
 
