--- a/app/src/main/res/layout/activity_proposed_walk_screen.xml
+++ b/app/src/main/res/layout/activity_proposed_walk_screen.xml
@@ -598,20 +598,58 @@
                     android:text="    Hello these are notes I wrote down about this trail. I don't know why I'm writing so much about this trail." />
             </LinearLayout>
 
-            <TextView
-                android:id="@+id/proposed_route_votes_textView"
+            <LinearLayout
+                android:id="@+id/proposed_label_layout"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginTop="10dp"
-                android:layout_marginRight="10dp"
-                android:ellipsize="none"
-                android:paddingStart="10dp"
-                android:paddingEnd="15dp"
-                android:scrollHorizontally="true"
-                android:text="Votes"
-                android:textAlignment="textStart"
-                android:textSize="24sp"
-                android:textStyle="bold" />
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/proposed_route_votes_textView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginEnd="5dp"
+                    android:layout_weight="6.5"
+                    android:ellipsize="none"
+                    android:paddingStart="10dp"
+                    android:paddingEnd="15dp"
+                    android:scrollHorizontally="true"
+                    android:text="Votes"
+                    android:textAlignment="textStart"
+                    android:textSize="24sp"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/yes_label"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_marginTop="15dp"
+                    android:layout_marginEnd="5dp"
+                    android:layout_weight="1"
+                    android:text="Yes!"
+                    android:textAlignment="center" />
+
+                <TextView
+                    android:id="@+id/bad_time_label"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_marginTop="15dp"
+                    android:layout_marginEnd="5dp"
+                    android:layout_weight="1"
+                    android:text="Bad Time"
+                    android:textAlignment="center" />
+
+                <TextView
+                    android:id="@+id/dont_want_label"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_marginTop="15dp"
+                    android:layout_marginEnd="5dp"
+                    android:layout_weight="1"
+                    android:text="Don't Like"
+                    android:textAlignment="center" />
+            </LinearLayout>
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/vote_view"
