--- a/app/src/main/res/layout/vote_item.xml
+++ b/app/src/main/res/layout/vote_item.xml
@@ -9,6 +9,7 @@
         android:id="@+id/vote_cards"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        app:cardBackgroundColor="#FFFFFFFF"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
