--- a/app/src/main/res/layout/activity_route_details_page.xml
+++ b/app/src/main/res/layout/activity_route_details_page.xml
@@ -70,7 +70,7 @@
                         android:layout_marginBottom="5dp"
                         android:text="Starting Point"
                         android:clickable="true"
-                        android:onClick="launchGoogleMaps"
+                        android:onClick="startingPointClickListener"
                         android:textSize="18sp" />
 
                 </TableRow>
